overflow fix member detail

--- a/console/src/app/modules/project-members/project-members.component.scss
+++ b/console/src/app/modules/project-members/project-members.component.scss
@@ -17,6 +17,7 @@
     flex: 1;
     padding-top: 1rem;
     padding-right: 1rem;
+    overflow-x: auto;
 
     .head {
       display: flex;
