--- a/console/src/app/pages/iam/iam-members/iam-members.component.scss
+++ b/console/src/app/pages/iam/iam-members/iam-members.component.scss
@@ -16,6 +16,7 @@
   .right {
     flex: 1;
     padding-top: 1rem;
+    overflow-x: auto;
 
     .head {
       display: flex;
