--- a/console/src/app/pages/orgs/password-policy/password-policy.component.scss
+++ b/console/src/app/pages/orgs/password-policy/password-policy.component.scss
@@ -16,6 +16,7 @@
 
   .right {
     flex: 1;
+    overflow-x: auto;
 
     .head {
       display: flex;
