--- a/console/src/app/pages/projects/owned-projects/project-grant-detail/project-grant-detail.component.scss
+++ b/console/src/app/pages/projects/owned-projects/project-grant-detail/project-grant-detail.component.scss
@@ -26,6 +26,7 @@
   .right {
     flex: 1;
     padding-top: 1rem;
+    overflow-x: auto;
 
     .head {
       display: flex;
